--- a/resourse.html
+++ b/resourse.html
@@ -85,15 +85,66 @@
         </div>
 
 
-        <div class="panel panel-default mt">
-            <div class="panel-heading">
-                <h3 class="panel-title">Panel title</h3>
-            </div>
+        <div class="panel panel-default mt leftblue">
+
             <div class="panel-body">
-                Panel content
+                <div class="row firstLine">
+                    <div class="col-xs-4 bluefont">机组课件、作业、project</div>
+                    <div class="col-xs-5 small date">xx 上传于 2017年8月23日21:29:35</div>
+                    <div class="col-xs-3">课件</div>
+                </div>
+                <div class="row firstLine">
+                    <div class="col-xs-9 date small">机组课件与project.zip</div>
+                    <button type="button" class="btn btn-success col-xs-1">下载 </button>
+                </div>
+                <div class="row blackline">
+                    <div class="col-xs-12">教师：吴彦祖</div>
+                </div>
+                <div class="row blackline">
+                    <div class="col-xs-12">下载量：999</div>
+                </div>
+                <div class="row blackline">
+                    <div class="col-xs-12">需要积分：999</div>
+                </div>
+
+                <div class="row blackline">
+                    <div class="col-xs-12">
+                        0 0
+
+                    </div>
+                </div>
             </div>
         </div>
+        <div class="panel panel-default mt leftblue">
 
+            <div class="panel-body">
+                <div class="row firstLine">
+                    <div class="col-xs-4 bluefont">机组课件、作业、project</div>
+                    <div class="col-xs-5 small date">xx 上传于 2017年8月23日21:29:35</div>
+                    <div class="col-xs-3">课件</div>
+                </div>
+                <div class="row firstLine">
+                    <div class="col-xs-9 date small">机组课件与project.zip</div>
+                    <button type="button" class="btn btn-success col-xs-1">下载 </button>
+                </div>
+                <div class="row blackline">
+                    <div class="col-xs-12">教师：吴彦祖</div>
+                </div>
+                <div class="row blackline">
+                    <div class="col-xs-12">下载量：999</div>
+                </div>
+                <div class="row blackline">
+                    <div class="col-xs-12">需要积分：999</div>
+                </div>
+
+                <div class="row blackline">
+                    <div class="col-xs-12">
+                        0 0
+
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="container" id="outerResourse" style="display: none">
         <div class="jumbotron">
@@ -127,12 +178,64 @@
         </div>
 
 
-        <div class="panel panel-default mt">
-            <div class="panel-heading">
-                <h3 class="panel-title">Panel title</h3>
-            </div>
+        <div class="panel panel-default mt leftblue">
+
             <div class="panel-body">
-                Panel content
+                <div class="row firstLine">
+                    <div class="col-xs-4 bluefont">机组课件、作业、project</div>
+                    <div class="col-xs-5 small date">xx 上传于 2017年8月23日21:29:35</div>
+                    <div class="col-xs-3">课件</div>
+                </div>
+                <div class="row firstLine">
+                    <div class="col-xs-9 date small">机组课件与project.zip</div>
+                    <button type="button" class="btn btn-success col-xs-1">下载 </button>
+                </div>
+                <div class="row blackline">
+                    <div class="col-xs-12">教师：吴彦祖</div>
+                </div>
+                <div class="row blackline">
+                    <div class="col-xs-12">下载量：999</div>
+                </div>
+                <div class="row blackline">
+                    <div class="col-xs-12">需要积分：999</div>
+                </div>
+
+                <div class="row blackline">
+                    <div class="col-xs-12">
+                        0 0
+
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="panel panel-default mt leftblue">
+
+            <div class="panel-body">
+                <div class="row firstLine">
+                    <div class="col-xs-4 bluefont">机组课件、作业、project</div>
+                    <div class="col-xs-5 small date">xx 上传于 2017年8月23日21:29:35</div>
+                    <div class="col-xs-3">课件</div>
+                </div>
+                <div class="row firstLine">
+                    <div class="col-xs-9 date small">机组课件与project.zip</div>
+                    <button type="button" class="btn btn-success col-xs-1">下载 </button>
+                </div>
+                <div class="row blackline">
+                    <div class="col-xs-12">教师：吴彦祖</div>
+                </div>
+                <div class="row blackline">
+                    <div class="col-xs-12">下载量：999</div>
+                </div>
+                <div class="row blackline">
+                    <div class="col-xs-12">需要积分：999</div>
+                </div>
+
+                <div class="row blackline">
+                    <div class="col-xs-12">
+                        0 0
+
+                    </div>
+                </div>
             </div>
         </div>
 
