完成文件上传

--- a/personalCenter.html
+++ b/personalCenter.html
@@ -12,8 +12,8 @@
 
 
 </head>
-<body>
-<div class="container">
+<body style="margin: 0 ; padding: 0;height: 100%;background-color: #fbf8f0;">
+<div class="container" >
     <nav class="navbar navbar-default" role="navigation">
         <div class="container-fluid">
             <div class="navbar-header">
