--- a/resourse.html
+++ b/resourse.html
@@ -22,7 +22,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="index.html">
                     <img alt="Brand" src="imgs/logo.png" style="width: 3rem;height: 3rem;margin-top: -0.75rem;">
                 </a>
                 <!--<img src="imgs/zhiku.png" alt="" style="height: 2rem;">-->
@@ -37,8 +37,14 @@
                 </ul>
                 <button type="button" class="btn btn-default navbar-btn navbar-right">Sign in</button>
                 <form class="navbar-form navbar-right">
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Search">
+                    <div class="dropdown">
+                        <input type="text" class="form-control dropdown-toggle" placeholder="Search" id="dropdownMenu5" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu5" data-drop="dropdownMenu5">
+                            <li><a href="#" >大一</a></li>
+                            <li><a href="#" >大二</a></li>
+                            <li><a href="#" >大三</a></li>
+                            <li><a href="#" >大四</a></li>
+                        </ul>
                     </div>
                     <button type="submit" class="btn btn-default">搜索</button>
                 </form>
@@ -56,7 +62,7 @@
         <div class="jumbotron">
             <h1>Hello, world!</h1>
             <p>每一个不曾起舞的日子都是对生命的浪费</p>
-            <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+            <p><a class="btn btn-primary btn-lg" href="upload.html" role="button">上传资料</a></p>
         </div>
 
 
@@ -150,7 +156,7 @@
         <div class="jumbotron">
             <h1>Hello, world!</h1>
             <p>每一个不曾起舞的日子都是对生命的浪费</p>
-            <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+            <p><a class="btn btn-primary btn-lg" href="upload.html" role="button">上传资料</a></p>
         </div>
 
 
