--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
      <script src="js/bootstrap.min.js"></script>
      <script src="http://cdn.jsdelivr.net/jquery.scrollto/2.1.2/jquery.scrollTo.min.js"></script>
      <script src="js/API.js"></script>
-     <script src="js/ajaxHandler.js"></script>
+     
 
  </head>
  <body>
@@ -260,14 +260,14 @@
                          <div class="form-group" style="margin-top: 3rem">
                              <label class="col-sm-3 control-label"></label>
                              <div class="col-sm-6">
-                                 <input type="text" class="form-control"
+                                 <input id="userInput" type="text" class="form-control"
                                         placeholder="请输入账号">
                              </div>
                          </div>
                          <div class="form-group">
                              <label  class="col-sm-3 control-label"></label>
                              <div class="col-sm-6">
-                                 <input type="text" class="form-control"
+                                 <input id="passwordInput" type="password" class="form-control"
                                         placeholder="请输入密码">
                              </div>
                          </div>
@@ -277,7 +277,7 @@
                  <div class="modal-footer">
                      <button type="button" class="btn btn-default" data-dismiss="modal"  data-toggle="modal" data-target="#regist">点击注册
                      </button>
-                     <button type="button" class="btn btn-primary">
+                     <button type="button" class="btn btn-primary" id="login-btn">
                          点击登录
                      </button>
                  </div>
@@ -300,19 +300,19 @@
                          <div class="form-group" >
                              <label class="col-sm-3 control-label"></label>
                              <div class="col-sm-6">
-                                 <input type="text" class="form-control"
+                                 <input id="r-user" type="text" class="form-control"
                                         placeholder="请输入账号">
                              </div>
                              <div class="col-sm-6 col-sm-offset-3">
-                                 <input type="text" class="form-control"
+                                 <input id="r-email" type="text" class="form-control"
                                         placeholder="请输入邮箱">
                              </div>
                              <div class="col-sm-6 col-sm-offset-3">
-                                 <input type="text" class="form-control"
+                                 <input id="r-phone" type="text" class="form-control"
                                         placeholder="请输入手机号">
                              </div>
                              <div class="col-sm-6 col-sm-offset-3">
-                                 <input type="text" class="form-control"
+                                 <input id="r-password" type="password" class="form-control"
                                         placeholder="请输入密码">
                              </div>
                          </div>
@@ -322,7 +322,7 @@
                  </div>
                  <div class="modal-footer">
 
-                     <button type="button" class="btn btn-primary">
+                     <button type="button" id="register-btn" class="btn btn-primary">
                          点击注册
                      </button>
                  </div>
@@ -364,4 +364,6 @@
          });
      });
  </script>
+ <script src="js/ajaxHandler.js"></script>
+ <script src="js/index.js"></script>
  </html>   
