--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                                         placeholder="请输入手机号">
                              </div>
                              <div class="col-sm-6 col-sm-offset-3">
-                                 <input id="r-password" type="password" class="form-control"
+                                 <input id="r-pw" type="password" class="form-control"
                                         placeholder="请输入密码">
                              </div>
                          </div>
