--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
      <title>吉鹏智库</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">       
     <link rel="stylesheet" type="text/css" href="css/index.css">
+    <link rel="stylesheet" type="text/css" href="css/toast.css">    
      <script src="js/jquery-1.12.3.min.js"></script>
      <script src="js/bootstrap.min.js"></script>
      <script src="http://cdn.jsdelivr.net/jquery.scrollto/2.1.2/jquery.scrollTo.min.js"></script>
      <script src="js/API.js"></script>
+     <script src="js/toastDom.js"></script>
+     
      
 
  </head>
