--- a/searchResourse.html
+++ b/searchResourse.html
@@ -23,7 +23,7 @@
             <div class="col-sm-6 col-xs-12">
                 <div class="box-item">
                     <h3>课外资源模块</h3>
-                    <div class="btn btn-primary entry-btn" onclick="navToResource(2)">进入</div>
+                    <div class="btn btn-primary entry-btn disabled" title="敬请期待">进入</div>
                 </div>
             </div>
         </div>
