--- a/upload.html
+++ b/upload.html
@@ -45,7 +45,7 @@
 
 
 
-                <div class="form-group">
+                <!-- <div class="form-group">
                     <label  class="col-sm-2 control-label">校内/校外</label>
                     <div id='module' class="btn-group" data-toggle="buttons" style="padding-left: 15px">
                         <label class="btn btn-primary active">
@@ -55,7 +55,7 @@
                             <input type="radio" name="options" id="option2" autocomplete="off"> 校外资源
                         </label>
                     </div>
-                </div>
+                </div> -->
                 <div class="form-group">
                     <label  class="col-sm-2 control-label" >文件</label>
                     <div class="col-sm-8">
@@ -87,12 +87,13 @@
                 </div>
                 <div class="form-group">
                     <label  class="col-sm-2 control-label">简介</label>
-                    <div class="col-sm-10">
-                        <input type="email" id="filedesc" class="form-control"  placeholder="简单的文件描述">
+                    <div class="col-sm-6">
+                        <textarea class="form-control" id="filedesc" rows="3" placeholder="简单的文件描述"></textarea>
                     </div>
                 </div>
-
-                <button type="button" style="float: right" class="btn btn-success">提交</button>
+                <div class="col-sm-8">
+                    <button type="button" style="float: right" class="btn btn-success">提交</button>                    
+                </div>
             </form>
         </div>
     </div>
