写了几个接口 meixiewan

--- a/index.html
+++ b/index.html
@@ -44,10 +44,11 @@
                      <li class="orig"><a href="javascript:navToSR()">智库原创</a></li>
                      <li class="grou"><a href="javascript:void(0)">团队建设</a></li>
                      <li><a href="#" data-toggle="modal" data-target="#myModal">意见反馈</a></li>
-                     <li id="loginOption"><a href="#"  data-toggle="modal" data-target="#login">登录/注册</a></li>
-                     <!--<li><a href="#">课内资源</a></li>-->
-                     <!--<li><a href="#">课外资源</a></li>-->
-                     <!--<li><a href="member.html">成员介绍</a></li>-->
+                     <li id="loginOption">
+                         <a href="#"  data-toggle="modal" data-target="#login">登录/注册</a>
+                         <a href="javascript:logout()" id="exitLogin" class="">退出登录</a>
+                     </li>
+                    
                      <li class="about"><a href="javascript:void(0)">关于我们</a></li>
 
                  </ul>
