--- a/personalCenter.html
+++ b/personalCenter.html
@@ -9,13 +9,16 @@
     <link rel="stylesheet" type="text/css" href="css/personalCenter.css">
     <script src="js/jquery-1.12.3.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-
-
+    <script src="js/API.js"></script>
+    <script src="js/ajaxHandler.js"></script>
 </head>
 <body style="margin: 0 ; padding: 0;height: 100%;background-color: #fbf8f0;">
 <div class="container" >
     <nav class="navbar navbar-default" role="navigation">
         <div class="container-fluid">
+                <a class="navbar-brand" href="index.html">
+                    <img alt="Brand" src="imgs/logo.png" style="width: 3rem;height: 3rem;margin-top: -0.75rem;">
+                </a>
             <div class="navbar-header">
                 <a class="navbar-brand" href="#">个人中心</a>
             </div>
@@ -181,4 +184,5 @@
 
     }
 </script>
+<script src="js/personalCenter.js"></script>
 </html>
