--- a/resourse.html
+++ b/resourse.html
@@ -75,24 +75,24 @@
 
         <div class="dropdown">
             <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                年级
+                学院
                 <span class="caret"></span>
             </button>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenu1" data-drop="dropdownMenu1">
-                <li><a href="javascript:void(0)" onclick="selectAct(this)">大一</a></li>
-                <li><a href="javascript:void(0)" onclick="selectAct(this)">大二</a></li>
-                <li><a href="javascript:void(0)"  onclick="selectAct(this)">大三</a></li>
-                <li><a href="javascript:void(0)"  onclick="selectAct(this)">大四</a></li>
+                <li><a href="javascript:void(0)" onclick="selectAct(this)">软件学院</a></li>
+                <li><a href="javascript:void(0)" onclick="selectAct(this)">软件学院</a></li>
+                <li><a href="javascript:void(0)"  onclick="selectAct(this)">软件学院</a></li>
+                <li><a href="javascript:void(0)"  onclick="selectAct(this)">软件学院</a></li>
             </ul>
         </div>
         <div class="dropdown">
             <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                学院
+                专业
                 <span class="caret"></span>
             </button>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenu2" data-drop="dropdownMenu2">
-                <li><a href="javascript:void(0)" onclick="selectAct(this)">软件学院</a></li>
-                <li><a href="javascript:void(0)" onclick="selectAct(this)">软件学院</a></li>
+                <li><a href="javascript:void(0)" onclick="selectAct(this)">软件工程</a></li>
+                <li><a href="javascript:void(0)" onclick="selectAct(this)">软件工程</a></li>
             </ul>
         </div>
 
@@ -291,6 +291,17 @@
         var param = url.substring(i+1,i+2);
         console.log(param);
         switchSourse(param);
+        getCollegeList();
+    }
+
+    function getCollegeList() {
+        var user =new AjaxHandler();
+        user.getCollegeList(function (data,state) {
+            console.log(data);
+            console.log("获取college success");
+        },function () {
+            console.log("获取college failed");
+        })
     }
     var keyData ;//存放搜索框数据
     var docList ;//存放搜索到的文档列表
@@ -304,7 +315,7 @@
                 var innerList ='';
                 var keyData = data.data;
                 data.data.map((item,index)=>{
-                    innerList+=`<li><a href="javascript:void(0)" class="topOption" onclick="searchAll(1,${item.cid})">${item.cname}</a></li>`
+                    innerList+=`<li><a href="javascript:void(0)" class="topOption" onclick='searchAll(1,${item.cid})'>${item.cname}</a></li>`
                 })
                 document.getElementById('dropdownMenu5').innerHTML = innerList;
             }else if(data.status == 300){
