--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                      <li><a href="#" data-toggle="modal" data-target="#myModal">意见反馈</a></li>
                      <li id="loginOption">
                          <a href="#"  data-toggle="modal" data-target="#login">登录/注册</a>
-                         <a href="javascript:logout()" id="exitLogin" class="">退出登录</a>
+                         <a href="javascript:logout()" id="exitLogin">退出登录</a>
                      </li>
                     
                      <li class="about"><a href="javascript:void(0)">关于我们</a></li>
