--- a/personalCenter.html
+++ b/personalCenter.html
@@ -7,10 +7,12 @@
     <title>个人中心</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/personalCenter.css">
+    <link rel="stylesheet" href="css/toast.css">
     <script src="js/jquery-1.12.3.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/API.js"></script>
     <script src="js/ajaxHandler.js"></script>
+    <script src="js/toastDom.js"></script>
 </head>
 <body style="margin: 0 ; padding: 0;height: 100%;background-color: #fbf8f0;">
 <div class="container" >
@@ -25,8 +27,8 @@
             <div>
                 <ul class="nav navbar-nav">
                     <li class="active option"><a href="#">修改个人信息</a></li>
-                    <li class="option"><a href="#">收藏的文件</a></li>
-                    <li class="option"><a href="#">下载的文件</a></li>
+                    <li class="option" id="uploadFile"><a href="#">上传的文件</a></li>
+                    <li class="option" id="downloadFile"><a href="#">下载的文件</a></li>
                 </ul>
             </div>
         </div>
@@ -53,7 +55,7 @@
                 </div>
             </div>
 
-            <button type="button" style="float: right" class="btn btn-success">保存修改信息</button>
+            <button type="button" style="float: right" id="saveInfo" class="btn btn-success">保存修改信息</button>
         </form>
     </div>
     <div id="collect" style="display: none">
